2008-02-10  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/usermod.c: Fix the handling of -a when a user is being
	renamed (with -l). The new name of the user was used for the new
	supplementary groups, but not in the existing ones.

2008-02-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Set the shadow's password instead of the
	passwd's password. Fix wrong cut&paste.

2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Use a function to convert the dates from
	/etc/shadow to human readable dates.
	* src/usermod.c: Really log the expiration date change as human
	readable strings instead of integers.
	* src/usermod.c: No need to check audit_fd, audit_logger() will
	take care of this.

2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Do not translate the fromhost variable. It is
	always used for syslog messages.

2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, lib/defines.h: Switch to the C locale before sending
	messages to syslog. The messages sent by shadow were not
	translated, but error messages from PAM returned by pam_strerror()
	were translated in the users's locale.

2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: newusers will behave more like useradd.
	* src/newusers.c: The user's ID must be found before the group ID
	to mimic useradd's behavior choices of UID and GID.
	* src/newusers.c: Reuse the generic find_new_uid() and
	find_new_gid() functions. This permits to respect the
	UID_MIN/UID_MAX and GID_MIN/GID_MAX variables, should 
	* src/newusers.c: Check if the user or group exist using the
	external databases (with the libc getpwnam/getgrnam functions).
	Refuse to update an user which exist in an external database but
	does not exist in the local database.
	* src/newusers.c: Check the usernames and groupnames with
	check_user_name() and check_group_name()